2014-05-13  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2432: ppc64 JIT doesn't support class data sharing
	* Makefile.am:
	(add-archive): Skip on ppc64.
	(add-archive-debug): Likewise.
	(add-archive-boot): Likewise.
	* NEWS: Updated.

2015-06-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2429: OpenJDK build does not copy a symlinked
	cacerts file
	* Makefile.am:
	(JDK_CACERTS_FILE): Added to specify the location
	of cacerts within the bootstrap JDK.
	(CACERTS_FILE): Find the regular cacerts file,
	dereferencing any symlinks which point to it.
	(ICEDTEA_CONFIGURE): Pass the deferenced CACERTS_FILE
	to OpenJDK's configure, rather than the JDK path.
	* NEWS: Updated.
	* configure.ac:
	Call IT_FIND_TOOL to locate the readlink tool,
	which is part of coreutils.

2015-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2413: OpenJDK doesn't auto-select Zero on
	architectures where no server JVM is available
	* Makefile.am:
	(ICEDTEA_ZERO_BUILD): Removed.
	(ICEDTEA_SHARK_BUILD): Likewise.
	(ICEDTEA_CONFIGURE): Pass zero
	or zeroshark as appropriate to
	--with-jvm-variants in OpenJDK configure.
	* NEWS: Updated.

2015-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2414: CFLAGS, CXXFLAGS and LDFLAGS should be
	passed to OpenJDK build
	* Makefile.am:
	(ICEDTEA_CONFIGURE): Pass --with-extra-cflags,
	--with-extra-cxxflags and --with-extra-ldflags,
	using CFLAGS, CXXFLAGS and LDFLAGS values
	held by make.
	* NEWS: Updated.

2015-06-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	(CORBA_CHANGESET): Update to icedtea-3.0.0pre04 tag.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(NASHORN_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.